# Forradica

./: CMakeLists.txt  Main.cpp  README.md
Configuration/: Configuration.cpp  Configuration.h
Convenience/: Cast.cpp  Cast.h  Constants.h  GetHash.h  SDLDeleter.h  Tools.cpp  Tools.h
Convenience.Development/: Development.cpp  Development.h
Convenience.Math/: FAutoRectangle.h  FPoint.h  FRectangle.cpp  FRectangle.h  FSize.h  Size.h
Core/: CustomCursor.cpp  CustomCursor.h  Data.cpp  Data.h  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h  SDL.cpp  SDL.h  SceneManager.cpp  SceneManager.h
Core.Content.Generation/: MapGeneration.cpp  MapGeneration.h
Core.Drawing/: Draw.cpp  Draw.h
Core.Enums/: CursorTypes.h
Core.Logic/: PlayerKeyboardMovement.cpp  PlayerKeyboardMovement.h
Core.Scenes/: MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  StartUpScene.cpp  StartUpScene.h
Core.Scenes.Components/: SceneButton.cpp  SceneButton.h
Core.Scenes.MainScene/: FPSCounter.cpp  FPSCounter.h  MainScene.cpp  MainScene.h
Core.Scenes.MainScene.Input/: KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
Core.Scenes.MainScene.Render/: WorldRendering.cpp  WorldRendering.h
Core.WorldStructure/: Actor.cpp  Actor.h  MapArea.cpp  MapArea.h  Object.cpp  Object.h  Tile.cpp  Tile.h
Resources/: FontResources.cpp  FontResources.h  ImageResources.cpp  ImageResources.h
